# wasm-udf-example

./: .gitignore  README.md  quickstart.sh
adder/: Cargo.toml
adder/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
