[package]
name = "runner"
version = "0.1.0"
authors = ["Stuart Small <stuart.alan.small@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "3.0"
structopt = "0.3"
wasmtime-rust = "0.25.0"
wasi-cap-std-sync = "0.25.0"